Deny holidays if planning started or validated
The user can select the validation level when adding an holiday
Statistics: remove former folder templates/statistiques
Notification page: move notifications.js to public/js/plb. Add baseURL to Ajax query
Hamac import: Optimize log
Symfonize models
Symfonize stats staturday
Integration with CircleCI (Continuous integration service)


-Fixes
Remove HTML entities in closing days
Working hours fixes
Add validate icon
Use PHP default timezone.
Keep absence's other reason when there is recurrence
Fix display of agents on vacation on the week schedules
Prevent warnings in script tools/remove_html_entities_from_absences_reasons.php
Prevent the redirection to the 'access denied' page on cli and symfony mode
Replace heredoc string by double quotes string at end of weekly
planning
check if agents are blocked when right copying planning's cell
show only managed agents in list and in add form
Fix/Statistics : Initialize information about agents
Fix reset URL for holiday index and rename related button
Write ICS URL from base URL
Fix a wrong links on absence and holiday notifications
Restore right for self-removing in absence edition
Don't sanitize config elements
LDAP: Change LDAP-ID-Attribute value from supannAliasLogin to supannaliaslogin
Fix wrong reset URL on statistics/attendeesmissing
PHP8, fix wrong use of mysqli_connect_errno. Handle id=0 in function nom
PHP8, fix wrong use of implode and join functions

*** Version 20.10.00       (2020-10-09)   ***
- Enhancements
Add working hours exceptions
Retrieve absences from microsoft graph API
Add a cron script to purge the log table: planningBibio:PurgeLogTable
Check journey times between site / areas
Having "Full day" checked by default in absences is configurable
Check journey times between absences and jobs
Enable web profiler on dev environment
Symfonisation of admin -> activites
Use Doctrine ORM for skill pages
Use fine tuning of hours in holidays forms